tests/ui/issues/issue-1476.stderr
error[E0425]: cannot find value `x` in this scope
  --> $DIR/issue-1476.rs:2:20
   |
LL |     println!("{}", x);
   |                    ^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
