tests/ui/issues/issue-1476.rs
fn main() {
    println!("{}", x); //~ ERROR cannot find value `x` in this scope
}
